...
                        if (!isFocused) {
                            isFocused = it.isFocused
                        }
                    },
                value = value,
                onValueChange = onValueChange,
                label = "Type your deeplink here...",
                keyboardOptions = KeyboardOptions.Default.copy(
                    keyboardType = KeyboardType.Uri,
                    autoCorrectEnabled = false,
                    imeAction = ImeAction.Done,
                ),
                colors = defaultTextFieldColors.copy(
...
