...
        val deepLink = deepLink.value
        viewModelScope.launch {
            shortcutMutex.withLock {
                if (isShortcut.value) {
                    shortcutManager.remove(deepLink.id)
                    isShortcut.value = false
                    messageDispatcher.trySend("Removed from app shortcuts")
                } else if (!validateDeepLink.isValid(deepLink.link)) {
                    messageDispatcher.trySend("Invalid deeplink")
                } else {
                    when (shortcutManager.add(deepLink)) {
                        DeepLinkShortcutManager.AddResult.Added -> {
                            isShortcut.value = true
                            messageDispatcher.trySend("Added to app shortcuts")
                        }

                        DeepLinkShortcutManager.AddResult.NotSupported -> {
                            messageDispatcher.trySend("App shortcuts are not supported on this device")
                        }

...
