...
                label = "Add to Home",
                painter = rememberVectorPainter(TablerIcons.Home),
                onClick = { onAction(LaunchAction.PinToHomeScreen) },
            )

            QuickAction(
                label = "Shortcut",
                painter = rememberVectorPainter(TablerIcons.Bolt),
                checked = isShortcut,
                checkedTint = colors.button.primaryContent,
                checkedBackground = colors.button.primaryBackground,
                onClick = { onAction(LaunchAction.ToggleShortcut) },
            )
...
